force-app/main/default/objects/Subsidy_Rate__c/Subsidy_Rate__c.object-meta.xml
<CustomObject>
    <label>Subsidy Rate</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Subsidy Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subsidy Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>