force-app/main/default/objects/Subsidy_Rate__c/fields/Adoption_Case__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Subsidy Rates</relationshipLabel>
    <relationshipName>Subsidy_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>