force-app/main/default/objects/Subsidy_Rate__c/fields/Adoptive_Family_s_Relationship_to_Child__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Family_s_Relationship_to_Child__c</fullName>
    <inlineHelpText>Adoptive Family&apos;s Relationship to Child</inlineHelpText>
    <label>Adoptive Family&apos;s Relationship to Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>