force-app/main/default/objects/Subsidy_Rate__c/fields/Does_the_child_have_special_needs__c.field-meta.xml
<CustomField>
    <fullName>Does_the_child_have_special_needs__c</fullName>
    <inlineHelpText>Does the child have special needs</inlineHelpText>
    <label>Does the child have special needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>