force-app/main/default/objects/Subsidy_Rate__c/fields/Primary_Basics_for_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Primary_Basics_for_Special_Needs__c</fullName>
    <inlineHelpText>Primary Basics for Special Needs</inlineHelpText>
    <label>Primary Basics for Special Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Child with a high risk of physical or mental disease</fullName>
            </value>
            <value>
                <fullName>Medical/Mental/Physical/Emotional Disabilities</fullName>
            </value>
            <value>
                <fullName>Membership in a sibling Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Racial/Original Background</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>