force-app/main/default/objects/Subsidy_Rate__c/fields/Rate_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Begin_Date__c</fullName>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Rate Begin Date</label>
    <type>Date</type>
</CustomField>