force-app/main/default/objects/Subsidy_Rate__c/fields/SSA_Approval__c.field-meta.xml
<CustomField>
    <fullName>SSA_Approval__c</fullName>
    <label>SSA Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>