force-app/main/default/objects/Subsidy_Rate__c/fields/SSA_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SSA_Approval_Date__c</fullName>
    <label>SSA Approval Date</label>
    <type>Date</type>
</CustomField>